[package]
name = "networkg"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/gustavgransbo/networkg"
authors = ["Gustav Gränsbo <gustav.gransbo@gmail.com>"]
edition = "2018"

[lib]
name = "networkg"
crate-type = ["cdylib"]

[dependencies]
csv = "1.1"
pyo3 = {version = "0.12.4", features = ["extension-module"]}

[package.metadata.maturin]
requires-python = ">=3.7"
